--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.2",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.4",
     "dotenv": "^16.4.5",
     "esbuild": "^0.20.2",
@@ -27,6 +28,7 @@
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
+    "node-cron": "^3.0.3",
     "nostr-tools": "^2.3.2",
     "pg": "^8.11.3"
   }
